examples/test/testpolicy15500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15500
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key15: value29
      key43: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value18
      podSelector:
        matchLabels:
          key23: value11
          key38: value34
